# contact_graspnet_pytorch

./: pyproject.toml
checkpoints/contact_graspnet/: contact_graspnet.py
contact_graspnet/: acronym_dataloader.py  contact_grasp_estimator.py  contact_graspnet.py  data.py  datagen_scene_renderer.py  inference.py  render_acronym.py  render_acronym_multicore.py  scene_renderer.py  train.py  visualize_saved_scene.py
contact_graspnet/testers/: test_acronym.ipynb  test_acronym.py  test_contact_graspnet_pytorch.ipynb  test_contact_graspnet_pytorch.py
tools/: create_contact_infos.py
